# cs1410-Inheritance

./: CMakeLists.txt  Counter.cpp  Counter.h  Notes.txt  distance.cpp  distance.h  employee.cpp  employee.h  laborer.cpp  laborer.h  main.cpp  manager.cpp  manager.h  newEmployee.cpp  scientists.cpp  scientists.h  testDistance.cpp
